# generative_ai_projects

./: main.py  pyproject.toml
streamlit-rag/: deci_tutorial.ipynb  langchain_tutorial.ipynb  rag_testing.ipynb  requirements.txt  streamlit_app.py  tds_tutorial.ipynb
streamlit-rag/cachce/: text-embedding-ada-002017d77e0-4db4-5489-b5ff-2f5bb841abaa  text-embedding-ada-0020344baf6-4ae4-5703-a7c5-9df7be19cf72  text-embedding-ada-0020571ea94-cfaf-5e53-91ad-80087d390805  text-embedding-ada-00205d50ac1-f311-5dfc-a3ae-19c89dcd1dde  text-embedding-ada-0020c5efce0-e73d-5697-b7b5-606f1d5ed8ba  text-embedding-ada-0020cf8cbeb-2862-58c7-bc68-957e800295c4  text-embedding-ada-0020e665069-40da-5518-8a5d-202ccbea18c3  text-embedding-ada-0020ec18979-cf29-5c38-abe6-deb50955e0f0  text-embedding-ada-0020fc979e6-1cfd-5d7d-80d2-d399bb1df2d1  text-embedding-ada-0021236bcb1-722a-50c5-ac27-4629334156c6  text-embedding-ada-002130c2272-1635-5156-993c-53b64df59fc6  text-embedding-ada-002136a646d-9bb9-5a04-ae13-5861eee4e11f  text-embedding-ada-002142b7bc4-7b2e-519b-b815-0ef8872691d3  text-embedding-ada-00215a2d13b-5d08-50ff-a6fb-98aa8f4327f9  text-embedding-ada-00216225457-1174-52db-8b91-8d598aec85d0  text-embedding-ada-0021801fabe-b821-5fbe-9b19-4e89cf44dfb0  text-embedding-ada-0021aa0102a-28bf-52cf-b97b-0570244f0bc1  text-embedding-ada-0021aac4e19-9d5a-5696-b359-b17e24fe9898  text-embedding-ada-00220356316-d983-5773-9a63-975552ea0b9d  text-embedding-ada-002240b197c-72d7-5863-aa3d-acc1f76feaa6  text-embedding-ada-0022784342c-7c1d-5899-a88d-7a7075461c63  (+78 more)
